--- a/modules/assets/css/sanpham.css
+++ b/modules/assets/css/sanpham.css
@@ -63,6 +63,7 @@ html {
 }
 
 .product_info a:hover {
+    text-decoration: none;
     color: #E95144;
     cursor: pointer;
 }
@@ -113,6 +114,7 @@ html {
 
 .icon_cart {
     margin-right: 5px;
+    margin-top: 1px;
 }
 
 .product_item:hover .product_select {
@@ -129,6 +131,15 @@ html {
 .product_buy:hover {
     cursor: pointer;
     color: #E95144;
+}
+
+.product_buy input[type="submit"] {
+    text-transform: uppercase;
+    color: #ffff;
+    border: transparent;
+    background-color: var(--black-color);
+    font-size: 1.2rem;
+    padding-top: 2px;
 }
 
 .product_image:hover {
